test/functions/whereClauses/whereClauseNonParam.good
whereClauseNonParam.chpl:1: In function 'foo':
whereClauseNonParam.chpl:1: error: invalid where clause
